[package]
name = "strictly-data"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
html-escape = "0.2.9"
# lol_html 0.3.0 + on_end_tag
lol_html = { git = "https://github.com/cloudflare/lol-html", rev = "7c2f694b24320a6d217cc303c1e1f24bc8882784" }
reqwest = { version = "0.11.3", features = ["blocking"] }
select = "0.5.0"
serde = { version = "1", features = ["derive"] }
