[package]
name = "strictly-data"
version = "0.1.0"
edition = "2018"
default-run = "generate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
html-escape = "0.2.9"
# lol_html 0.3.0 + on_end_tag
lol_html = { git = "https://github.com/cloudflare/lol-html", rev = "0b5f515d8507a060470ad56a25fcbf58a5d35e29" }
reqwest = { version = "0.11.3", features = ["blocking"] }
select = "0.5.0"
serde = { version = "1", features = ["derive"] }
